# docs/swagger.yaml
@@ -10,6 +10,34 @@ definitions:
         example: pong
         type: string
     type: object
+  model.AdminBody:
+    properties:
+      email:
+        type: string
+      fullname:
+        maxLength: 30
+        minLength: 6
+        type: string
+      groupId:
+        type: integer
+      permissionIds:
+        items:
+          type: integer
+        type: array
+      phone:
+        maxLength: 12
+        minLength: 10
+        type: string
+      status:
+        type: string
+    required:
+    - email
+    - fullname
+    - groupId
+    - permissionIds
+    - phone
+    - status
+    type: object
   model.AdminCreateGroup:
     properties:
       groupId:
@@ -36,6 +64,8 @@ definitions:
     type: object
   model.CreateAdmin:
     properties:
+      adminGroupId:
+        type: integer
       email:
         type: string
       fullname:
@@ -46,9 +76,9 @@ definitions:
         maxLength: 30
         minLength: 6
         type: string
-      permissions:
+      permissionIds:
         items:
-          $ref: '#/definitions/model.Permission'
+          type: integer
         type: array
       phone:
         maxLength: 12
@@ -63,10 +93,11 @@ definitions:
         minLength: 6
         type: string
     required:
+    - adminGroupId
     - email
     - fullname
     - password
-    - permissions
+    - permissionIds
     - phone
     - roleId
     - status
@@ -109,19 +140,6 @@ definitions:
       token:
         type: string
     type: object
-  model.Permission:
-    properties:
-      createdAt:
-        type: string
-      deleteAt:
-        type: string
-      id:
-        type: integer
-      name:
-        type: string
-      updatedAt:
-        type: string
-    type: object
   model.PermissionName:
     properties:
       name:
@@ -149,6 +167,77 @@ definitions:
 info:
   contact: {}
 paths:
+  /admins:
+    get:
+      consumes:
+      - application/json
+      description: Get Admin List
+      parameters:
+      - description: Page
+        in: query
+        name: page
+        type: integer
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Search
+        in: query
+        name: search
+        type: string
+      - description: Status
+        in: query
+        name: status
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.SuccessWithList'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get Admin List
+      tags:
+      - Admins
+  /admins/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update Admin
+      parameters:
+      - description: Admin ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update Admin
+        in: body
+        name: register
+        required: true
+        schema:
+          $ref: '#/definitions/model.AdminBody'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Success'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update Admin
+      tags:
+      - Admins
   /admins/create:
     post:
       consumes:
@@ -203,6 +292,33 @@ paths:
       security:
       - BearerAuth: []
       summary: Create Group
+      tags:
+      - Admins
+  /admins/detail/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get Admin
+      parameters:
+      - description: Admin ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.SuccessWithData'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get Admin
       tags:
       - Admins
   /admins/group:
